<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Been There, Done That!</string>
    <string name="help">Help</string>
    <string name="menu">Main Menu</string>	
	<string name="settings">Settings</string>
	<string name="game">Game</string>
	<string name="scores">Scores</string>
	<string name="app_logo_top">BEEN THERE</string>
	<string name="app_logo_bottom">DONE THAT</string>
	<string name="app_version_info">Version 2.0.0\nCopyright © 2011 Tinoo\nAllRights Reserved.</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_play">Play Game</string>
	<string name="menu_item_scores">View Scores</string>
	<string name="menu_item_help">Help</string>
	<string name="all_scores">"All Scores"</string>
	<string name="friends_scores">"Scores of Friends"</string>
	<string name="no_scores">"No scores to show."</string>
	<string name="username">"Username"</string>
	<string name="rank">"Ranking"</string>
	<string name="score">"Score"</string>
	<string name="wait_msg">"Retrieving Scores..."</string>
	<string name="wait_title">"Loading..."</string>
	<string name="nickname">"Nickname:"</string>
	<string name="password_label">"Password"</string>
	<string name="password_again_label">"Password (again)"</string>
	<string name="set_password">"Set Password"</string>
	<string name="password_set">"Password Set"</string>
	<string name="password_not_set">"Password Not Set"</string>
	<string name="date_of_birth">"Date of birth"</string>
	<string name="set_date_of_birth">"Set date of birth"</string>
	<string name="date_of_birth_not_set">"Date of birth not set"</string>
	<string name="passwords_match">"The passwords match"</string>
	<string name="passwords_dont_match">"The passwords do not match"</string>
	<string name="gender">"Gender"</string>
	<string name="gender_male">"Male"</string>
	<string name="gender_female">"Female"</string>
	<string name="gender_unknown">"Prefer not to say"</string>	
	<string name="no_questions">No more questions available. Try back later.</string>
	<string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_score">Reset score</string>
    <string name="current_score">Current score:</string>
    <string name="favorite_place">Favorite place:</string>
    <string name="pick_a_place">Pick a place</string>
    <string name="no_favorit_place_set">No favorite place set</string>
    <string name="coordinates">Coordinates</string>
    <string name="current_location">Current location</string>
    <string name="map_it">Map It!</string>
    
</resources>
