<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd">
    	<RelativeLayout android:layout_width="wrap_content" 
        				android:layout_height="wrap_content" 
        				android:id="@+id/relativeLayout1" 
        				android:layout_alignParentTop="true" 
        				android:layout_centerHorizontal="true">
        				
            <ImageView  android:src="@drawable/quiz_icon" 
            			android:id="@+id/imageView1" 
            			android:layout_width="wrap_content" 
            			android:layout_height="wrap_content" 
            			android:layout_centerVertical="true"
            			android:layout_alignParentLeft="true" 
            			android:layout_alignParentTop="true"></ImageView>
            			
            <ImageView android:src="@drawable/quiz_icon"
            			android:id="@+id/imageView2" 
            			android:layout_width="wrap_content" 
            			android:layout_height="wrap_content" 
            			android:layout_centerVertical="true" 
            			android:layout_alignParentLeft="false" 
            			android:layout_alignParentRight="true" 
            			android:layout_alignParentTop="true"></ImageView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_toRightOf="@+id/imageView1" android:text="@string/settings" android:textColor="@color/menu_color" android:textSize="@dimen/screen_title_size" android:layout_centerHorizontal="true" android:layout_centerVertical="false" android:layout_alignParentTop="true" android:shadowColor="@color/menu_glow" android:shadowDx="3" android:shadowDy="3" android:shadowRadius="5"></TextView>
        </RelativeLayout>
    	<ScrollView android:layout_width="match_parent" android:id="@+id/scrollView1" android:layout_height="match_parent" android:scrollbars="vertical" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true">
    		<LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="vertical" android:visibility="visible" android:layout_height="match_parent">
    			<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">
    				<ImageButton android:src="@drawable/splash3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageButton_avatar" android:adjustViewBounds="true" android:maxHeight="@dimen/avatar_size" android:maxWidth="@dimen/avatar_size" android:longClickable="true" android:onClick="onLaunchCamera"></ImageButton>
    				<LinearLayout android:id="@+id/linearLayout6" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
    					<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/nickname"></TextView>
    					<EditText android:maxLength="20" android:maxLines="1" android:inputType="textPersonName" android:layout_height="wrap_content" android:id="@+id/EditText_Nickname" android:layout_width="match_parent"></EditText>
    				</LinearLayout>
    			</LinearLayout>
    			<TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username"></TextView>
    			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:id="@+id/EditText_Email" android:lines="1"></EditText>
    			<TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/password_label" android:layout_height="wrap_content"></TextView>
    			<LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
    				<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Button_Password" android:text="@string/set_password" android:onClick="onSetPasswordButtonClick"></Button>
    				<TextView android:layout_width="wrap_content" android:text="@string/password_not_set" android:layout_height="wrap_content" android:id="@+id/textView_PasswordState"></TextView>
    			</LinearLayout>
    			<TextView android:layout_width="wrap_content" android:id="@+id/textView5" android:text="@string/date_of_birth" android:layout_height="wrap_content"></TextView>
    			<LinearLayout android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="wrap_content">
    				<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Button_DOB" android:text="@string/set_date_of_birth" android:onClick="onPickDateButtonClick"></Button>
    				<TextView android:layout_width="wrap_content" android:id="@+id/textView_DOBState" android:layout_height="wrap_content" android:text="@string/date_of_birth_not_set"></TextView>
    			</LinearLayout>
    			<TextView android:layout_width="wrap_content" android:id="@+id/textView6" android:text="@string/gender" android:layout_height="wrap_content"></TextView>
    			<Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/Spinner_Gender" android:entries="@array/genders"></Spinner>
    			<TextView android:text="@string/score" android:layout_width="wrap_content" android:id="@+id/textView7" android:layout_height="wrap_content"></TextView>
    			<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4">
    				<Button android:onClick="onResetScoreButtonClick" android:layout_height="wrap_content" android:id="@+id/buttonResetScore" android:text="@string/reset_score" android:layout_width="wrap_content"></Button>
    				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textViewCurrentScoreLabel" android:text="@string/current_score"></TextView>
    				<TextView android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_width="wrap_content" android:id="@+id/textViewCurrentScoreValue" android:text="TextView"></TextView>
    			</LinearLayout>
    		</LinearLayout>
    	</ScrollView>
</LinearLayout>
